Add fish-tacos ingredients

--- a/recipes/fish-tacos.html
+++ b/recipes/fish-tacos.html
@@ -33,11 +33,11 @@
             </ul>
         <h3>Fish Tacos</h3>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>1 quart oil for frying</li>
+                <li>1 pound cod fillets, cut into 2 to 3 ounce portions</li>
+                <li>2 tablespoons all-purpose flour, or more as needed</li>
+                <li>1 (12 ounce) package corn tortillas</li>
+                <li>½ medium head cabbage, finely shredded</li>
             </ul>
 
         <h2>Steps</h2>
